# planetscale-driver

./: Cargo.toml  LICENSE  README.md
deserializer/: Cargo.toml
deserializer/src/: lib.rs
examples/: basics.rs  json.rs  multiple.rs  transactions.rs
examples/tls-override/: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: config.rs  connections.rs  deserializer.rs  lib.rs  parser.rs  querybuilder.rs  request.rs  response.rs  structs.rs  utils.rs
tests/: Cargo.toml  querybuilder.rs
tests/src/: main.rs
