[package]
name = "planetscale-driver"
version = "0.2.2"
edition = "2021"
description = "PlanetScale Serverless Driver"
license = "MIT"
repository = "https://github.com/filipton/planetscale-driver"

[dependencies]
ps-driver-deserializer = { path = "./deserializer", version = "0.1.3" }
anyhow = "1.0.70"
base64 = "0.21.0"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
async-mutex = "1.4.0"

[dev-dependencies]
tokio = { version = "1.27.0", features = ["full"] }
