[package]
name = "planetscale-driver"
version = "0.3.2"
edition = "2021"
description = "PlanetScale Serverless Driver"
license = "MIT"
repository = "https://github.com/filipton/planetscale-driver"

[dependencies]
planetscale-driver-macros = { path = "./macros", version = "0.2.2" }
anyhow = "1.0.71"
base64 = "0.21.0"
reqwest = {version = "0.11.17", default-features = false}
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
async-mutex = "1.4.0"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["full"] }


[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]