[package]
name = "planetscale-driver"
version = "0.5.0"
edition = "2021"
description = "PlanetScale Serverless Driver"
license = "MIT"
repository = "https://github.com/filipton/planetscale-driver"

[dependencies]
planetscale-driver-macros = { path = "./macros", version = "0.2.2" }
anyhow = "1.0.71"
base64 = "0.21.2"
reqwest = { version = "0.11.18", default-features = false }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }


[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
