[package]
name = "ps-driver-deserializer"
description = "A proc macro to deserialize a PS driver"
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/filipton/planetscale-driver"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.15", features = ["derive"] }
