[package]
name = "planetscale-driver-macros"
description = "Proc macros for Planetscale driver"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/filipton/planetscale-driver"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.15", features = ["derive"] }
