[package]
name = "planetscale-tls-override"
version="0.3.2"
edition = "2021"
license = "MIT"

[dependencies]
planetscale-driver = {path= "../..", default-features=false}
reqwest= {version= "0.11.17", default-features=false, features=["rustls-tls"]}
tokio = { version = "1.28.0", features = ["full"] }
anyhow = "1.0"
